--- a/src/core/styles/globals.css
+++ b/src/core/styles/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss/preflight";
+@import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss";
 
 @import "./typography.css";
