--- a/src/core/styles/color.css
+++ b/src/core/styles/color.css
@@ -9,5 +9,6 @@
 
   --color-text-primary: #353c49;
   --color-text-secondary: #6d7582;
+  --color-text-title: #1a1e27;
   --color-text-subtitle: #8d94a0;
 }
