--- a/src/core/styles/typography.css
+++ b/src/core/styles/typography.css
@@ -10,6 +10,10 @@
   @apply text-[1.125rem] font-bold leading-[100%];
 }
 
+@utility text-subtitle1 {
+  @apply text-[1rem] font-medium leading-[150%];
+}
+
 @utility text-body1 {
   @apply text-[1.25rem] font-medium leading-[100%];
 }
