--- a/src/core/styles/color.css
+++ b/src/core/styles/color.css
@@ -6,6 +6,7 @@
   --color-red: #e84118;
   --color-gray: #dadada;
   --color-light-gray: #f2f4f6;
+  --color-light-gray-100: #d2d6da;
 
   --color-text-primary: #353c49;
   --color-text-secondary: #6d7582;
