--- a/src/core/styles/globals.css
+++ b/src/core/styles/globals.css
@@ -1,5 +1,13 @@
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss";
+@import "tw-animate-css";
+
+/*
+ * Shadcn UI의 기본 스타일
+ * 
+ * @memo 컴포넌트 스타일을 적용하기 전에 반드시 먼저 선언되어야 커스텀 스타일이 덮어씌워지지 않습니다.
+ */
+@import "./shadcn.css";
 
 @import "./typography.css";
 @import "./color.css";
